2004-09-24  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.60.
	(OCTAVE_API_VERSION): Now api-v11.

2004-09-24  David Bateman  <dbateman@free.fr>

	* ov-fcn-inline (Finline): Attempt better auto-detection of
	symbols that should be recognized as arguments.

2004-09-24  John W. Eaton  <jwe@octave.org>

	* ov-str-mat.cc (default_numeric_conversion_function): Return
	scalar object if numel == 1.

2004-09-23  John W. Eaton  <jwe@octave.org>

	* ops.h	(DEFSTRDBLCONVFN): New macro.
	* OPERATORS/op-double-conv.cc: Use it to define new conversion op.
	Define new range to double matrix conversion.
	(install_int_conv_ops): Install new ops.	

	* ops.h	(DEFSTRINTCONVFN): New macro.
	* OPERATORS/op-int-conv.cc: Use it to define new conversion ops.
	(install_int_conv_ops): Install them.

	* (OCTAVE_SS_INT_OPS2, OCTAVE_SM_INT_OPS2, OCTAVE_MM_INT_OPS2,
	OCTAVE_INSTALL_SS_INT_OPS2, OCTAVE_INSTALL_SM_INT_OPS2,
	OCTAVE_INSTALL_MS_INT_OPS2, OCTAVE_INSTALL_MM_INT_OPS2):
	Delete unused macros.

	* OPERATORS/op-int.h (OCTAVE_SS_INT_BOOL_OPS): New args Z1 and Z2.
	(OCTAVE_SS_INT_OPS): Pass appropriately typed zero values to
	OCTAVE_SS_INT_BOOL_OPS.
	* OPERATORS/op-i64-i64.cc, OPERATORS/op-ui64-ui64.cc: Likewise.

	* pr-output.cc (pr_plus_format): Now template.
	Specialize for Complex.
	(octave_print_internal): Lookup print_conv_type using
	octave_int<T>, not just T.

	* ov-struct.cc (octave_struct::subsref): Pass skip to next_subsref.

	* oct-stream.cc	(do_read): Hitting EOF should not be an error.

2004-09-22  John W. Eaton  <jwe@octave.org>

	* pt-plot.cc (send_to_plot_stream): Skip automatic replot if in
	multiplot mode.

	* variables.cc (get_global_value): New arg, silent.
	* variables.h (get_global_value): Default value for silent arg is
	false.

2004-09-22  David Bateman  <dbateman@free.fr>

	* ov-fcn-inline.cc (Finline): When called with a single arg, derive
	argument of inline function in a compatible manner.
