@@ -85,20 +85,36 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 OCTAVE_S_INT_UNOPS (uint64)
 OCTAVE_SS_INT_CMP_OPS (ss, uint64_, uint64_)
+OCTAVE_SS_INT_CMP_OPS (sx, uint64_, )
+OCTAVE_SS_INT_CMP_OPS (xs, , uint64_)
 OCTAVE_SS_INT_BOOL_OPS (ss, uint64_, uint64_, octave_uint64 (0), octave_uint64 (0))
+OCTAVE_SS_INT_BOOL_OPS (sx, uint64_, , octave_uint64 (0), 0)
+OCTAVE_SS_INT_BOOL_OPS (xs, , uint64_, 0, octave_uint64 (0))
 
 OCTAVE_SM_INT_CMP_OPS (sm, uint64_, uint64_)
+OCTAVE_SM_INT_CMP_OPS (xm, , uint64_)
+OCTAVE_SM_INT_CMP_OPS (smx, uint64_, )
 OCTAVE_SM_INT_BOOL_OPS (sm, uint64_, uint64_)
+OCTAVE_SM_INT_BOOL_OPS (xm, , uint64_)
+OCTAVE_SM_INT_BOOL_OPS (smx, uint64_, )
 
 OCTAVE_MS_INT_CMP_OPS (ms, uint64_, uint64_)
+OCTAVE_MS_INT_CMP_OPS (mx, uint64_, )
+OCTAVE_MS_INT_CMP_OPS (mxs, , uint64_)
 OCTAVE_MS_INT_BOOL_OPS (ms, uint64_, uint64_)
+OCTAVE_MS_INT_BOOL_OPS (mx, uint64_, )
+OCTAVE_MS_INT_BOOL_OPS (mxs, , uint64_)
 OCTAVE_MS_INT_ASSIGN_OPS (ms, uint64_, uint64_, uint64_)
 OCTAVE_MS_INT_ASSIGN_OPS (mx, uint64_, , )
 OCTAVE_MS_INT_ASSIGN_OPS (mc, uint64_, complex_, )
 
 OCTAVE_M_INT_UNOPS (uint64)
 OCTAVE_MM_INT_CMP_OPS (mm, uint64_, uint64_)
+OCTAVE_MM_INT_CMP_OPS (mmx, uint64_, )
+OCTAVE_MM_INT_CMP_OPS (mxm, , uint64_)
 OCTAVE_MM_INT_BOOL_OPS (mm, uint64_, uint64_)
+OCTAVE_MM_INT_BOOL_OPS (mmx, uint64_, )
+OCTAVE_MM_INT_BOOL_OPS (mxm, , uint64_)
 OCTAVE_MM_INT_ASSIGN_OPS (mm, uint64_, uint64_, uint64_)
 OCTAVE_MM_INT_ASSIGN_OPS (mmx, uint64_, , )
 OCTAVE_MM_INT_ASSIGN_OPS (mmc, uint64_, complex_, )
@@ -127,25 +143,43 @@ OCTAVE_MIXED_INT_CMP_OPS (uint64, int32)
 OCTAVE_MIXED_INT_CMP_OPS (uint64, uint32)
 OCTAVE_MIXED_INT_CMP_OPS (uint64, int64)
 
+OCTAVE_CONCAT_FN (uint64)
+
 void
 install_ui64_ui64_ops (void)
 {
   OCTAVE_INSTALL_S_INT_UNOPS (uint64);
   OCTAVE_INSTALL_SS_INT_CMP_OPS (ss, uint64_, uint64_);
+  OCTAVE_INSTALL_SS_INT_CMP_OPS (sx, uint64_, );
+  OCTAVE_INSTALL_SS_INT_CMP_OPS (xs, , uint64_);
   OCTAVE_INSTALL_SS_INT_BOOL_OPS (ss, uint64_, uint64_);
+  OCTAVE_INSTALL_SS_INT_BOOL_OPS (sx, uint64_, );
+  OCTAVE_INSTALL_SS_INT_BOOL_OPS (xs, , uint64_);
 
   OCTAVE_INSTALL_SM_INT_CMP_OPS (sm, uint64_, uint64_);
+  OCTAVE_INSTALL_SM_INT_CMP_OPS (xm, , uint64_);
+  OCTAVE_INSTALL_SM_INT_CMP_OPS (smx, uint64_, );
   OCTAVE_INSTALL_SM_INT_BOOL_OPS (sm, uint64_, uint64_);
+  OCTAVE_INSTALL_SM_INT_BOOL_OPS (xm, , uint64_);
+  OCTAVE_INSTALL_SM_INT_BOOL_OPS (smx, uint64_, );
 
   OCTAVE_INSTALL_MS_INT_CMP_OPS (ms, uint64_, uint64_);
+  OCTAVE_INSTALL_MS_INT_CMP_OPS (mx, uint64_, );
+  OCTAVE_INSTALL_MS_INT_CMP_OPS (mxs, , uint64_);
   OCTAVE_INSTALL_MS_INT_BOOL_OPS (ms, uint64_, uint64_);
+  OCTAVE_INSTALL_MS_INT_BOOL_OPS (mx, uint64_, );
+  OCTAVE_INSTALL_MS_INT_BOOL_OPS (mxs, , uint64_);
   OCTAVE_INSTALL_MS_INT_ASSIGN_OPS (ms, uint64_, uint64_);
   OCTAVE_INSTALL_MS_INT_ASSIGN_OPS (mx, uint64_, );
   OCTAVE_INSTALL_MS_INT_ASSIGN_OPS (mc, uint64_, complex_);
 
   OCTAVE_INSTALL_M_INT_UNOPS (uint64);
   OCTAVE_INSTALL_MM_INT_CMP_OPS (mm, uint64_, uint64_);
+  OCTAVE_INSTALL_MM_INT_CMP_OPS (mmx, uint64_, );
+  OCTAVE_INSTALL_MM_INT_CMP_OPS (mxm, , uint64_);
   OCTAVE_INSTALL_MM_INT_BOOL_OPS (mm, uint64_, uint64_);
+  OCTAVE_INSTALL_MM_INT_BOOL_OPS (mmx, uint64_, );
+  OCTAVE_INSTALL_MM_INT_BOOL_OPS (mxm, , uint64_);
   OCTAVE_INSTALL_MM_INT_ASSIGN_OPS (mm, uint64_, uint64_);
   OCTAVE_INSTALL_MM_INT_ASSIGN_OPS (mmx, uint64_, );
   OCTAVE_INSTALL_MM_INT_ASSIGN_OPS (mmc, uint64_, complex_);
@@ -181,6 +215,8 @@ install_ui64_ui64_ops (void)
   OCTAVE_INSTALL_MIXED_INT_CMP_OPS (uint64, int32);
   OCTAVE_INSTALL_MIXED_INT_CMP_OPS (uint64, uint32);
   OCTAVE_INSTALL_MIXED_INT_CMP_OPS (uint64, int64);
+
+  OCTAVE_INSTALL_CONCAT_FN (uint64);
 }
 
 /*
